# kyrsovaya_5_work_bd

./: .gitignore  README.md  dbmanager.py  main.py  pyproject.toml  utils.py
